--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,64 @@
     <string name="loginHint">Enter a user name</string>
     <string name="loginButtonText">Login</string>
 
-    <string name="errMessageLogin">Invalid Login. Please retry.</string>
+
+    <string name="errMessageLogin">Invalid Login.  Please retry.</string>
     <string name="errMessagePassword">Invalid Password. Please retry.</string>
+    <string name="FirstName">First Name</string>
+    <string name="LastName">Last Name</string>
+    <string name="Phone">Phone</string>
+    <string name="txtBday">Date of Birth</string>
+    <string-array name="Months">
+        <item>Jan</item>
+        <item>Feb</item>
+        <item>Mar</item>
+        <item>Apr</item>
+        <item>May</item>
+        <item>Jun</item>
+        <item>Jul</item>
+        <item>Aug</item>
+        <item>Sep</item>
+        <item>Oct</item>
+        <item>Nov</item>
+        <item>Dec</item>
+    </string-array>
+
+    <string name="txtDay">Day</string>
+    <string name="txtYear">Year</string>
+    <string name="cert">Certificate</string>
+    <string name="twoYr">Associates Degree</string>
+    <string name="txtMajor">Major</string>
+    <string name="txtNext">Next</string>
+    <string-array name="lstCertificate">
+        <item>Android Certificate</item>
+        <item>iOS Mobile Certificate</item>
+    </string-array>
+    <string-array name="lstMajor">
+        <item>Digital Media</item>
+        <item>Mobile Application Development</item>
+        <item>Web Development</item>
+    </string-array>
+    <string name="btnNext">Next</string>
+
+    <string name="sectionClass">Select your class and time slot</string>
+    <string name="class1">MAD-107: ios 1</string>
+    <string name="class2">Mad-155: android 2</string>
+    <string name="class3">MAD-157: ios 2</string>
+    <string name="class4">Mad-257: Capstone Mobile Class</string>
+
+    <string name="timeRb1">T/Th 12:00 PM - 1:50 PM</string>
+    <string name="timeRb2">M/W 10:00 AM - 11:50 AM</string>
+    <string name="timeRb3">T/Th 12:00 PM - 1:50 PM</string>
+    <string name="timeRb4">T/Th 4:00 PM - 5:50 PM</string>
+    <string name="timeRb5">F 9:00 AM - 12:50 PM</string>
+    <string name="timeRb6">M/W 12:00 PM - 1:50 PM</string>
+
+    <string name="sumName">Student:</string>
+    <string name="sumPhone">Phone:</string>
+    <string name="sumBirth">Birthdate:</string>
+    <string name="sumDegree">Degree Plan:</string>
+    <string name="sumMajor">Major:</string>
+    <string name="sumNext">Next Semester:</string>
+
+
 </resources>
