--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
-    <string name="app_name">GuidedLab</string>
+
     <string name="login">Login</string>
     <string name="password">Password</string>
     <string name="loginHint">Enter a user name</string>
     <string name="loginButtonText">Login</string>
+
+    <string name="app_name">MAD-105-Final-Project</string>
+    <string name="txtTitle">Your Todo List</string>
+    <string name="txtAddItem">Add an objective</string>
+    <string name="btnAdd">Add</string>
+    <string name="btnRemove">Remove</string>
 
 
     <string name="errMessageLogin">Invalid Login.  Please retry.</string>
